7th commit: implement DI